# quadra

./: README.md  justfile  pyproject.toml
scripts/: generate_runpod_rest_client.sh
src/quadra/: __main__.py  cli.py  errors.py  runpod_rest.py  serverless_worker.py
src/quadra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/quadra/_generated/: __init__.py
src/quadra/_generated/runpod_rest_client/: __init__.py
src/quadra/_generated/runpod_rest_client/models/: __init__.py  billing_record.py  billing_records_item.py  container_registry_auth.py  container_registry_auth_create_input.py  cuda_versions.py  data_center.py  endpoint.py  endpoint_allowed_cuda_versions_item.py  endpoint_billing_bucket_size.py  endpoint_billing_data_center_id_item.py  endpoint_billing_gpu_type_id_item.py  endpoint_billing_grouping.py  endpoint_compute_type.py  endpoint_create_input.py  endpoint_create_input_allowed_cuda_versions_item.py  endpoint_create_input_compute_type.py  endpoint_create_input_cpu_flavor_ids_item.py  endpoint_create_input_data_center_ids_item.py  endpoint_create_input_gpu_type_ids_item.py  endpoint_create_input_min_cuda_version.py  endpoint_create_input_scaler_type.py  endpoint_data_center_ids_item.py  endpoint_env.py  endpoint_gpu_type_ids_item.py  endpoint_min_cuda_version.py  endpoint_scaler_type.py  endpoint_update_in_place_input.py  endpoint_update_in_place_input_scaler_type.py  endpoint_update_input.py  endpoint_update_input_allowed_cuda_versions_item.py  endpoint_update_input_cpu_flavor_ids_item.py  endpoint_update_input_data_center_ids_item.py  endpoint_update_input_gpu_type_ids_item.py  endpoint_update_input_min_cuda_version.py  endpoint_update_input_scaler_type.py  get_open_api_response_200.py  gpu_type_id.py  list_pods_compute_type.py  list_pods_desired_status.py  (+46 more)
src/quadra/assets/: banner.ansi  banner.txt
tests/: test_cli.py
(+24 files in other folders)
