[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quadra"
version = "0.1.0"
description = "Quadra owns the project/runtime lifecycle for experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "attrs>=22.2.0",
  "boto3>=1.34,<2",
  "click>=8.1,<9",
  "httpx>=0.23.1,<0.29",
  "rich>=13.9,<15",
]

[project.scripts]
quadra = "quadra.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
quadra = ["assets/*.ansi", "assets/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
